Update title from 'Ad Tycoon – Points Edition' to 'AD Tycoon'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Ad Tycoon – Points Edition</title>
+<title>AD Tycoon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Tab icon -->
   <link rel="icon" type="image/png" href="favicon.png" />
