--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       gap: 20px;
     }
 
-    /* IMAGE-BASED AD BUTTON */
+    /* IMAGE-ONLY AD BUTTON (no extra red circle) */
     #watchButton {
       width: 260px;
       height: 260px;
@@ -125,11 +125,6 @@
       cursor: pointer;
       outline: none;
 
-      /* fallback shape if image fails */
-      background-color: #ff3131;
-      border-radius: 50%;
-      box-shadow: 0 10px 0 #5a0b0b;
-
       /* hide text but keep for screen readers */
       color: transparent;
       text-indent: -9999px;
@@ -140,10 +135,8 @@
       opacity: 0.9;
     }
 
-    /* pressed state */
     #watchButton.playing {
       background-image: url("button-down.png");
-      box-shadow: 0 4px 0 #5a0b0b;
     }
 
     .ad-meta {
