--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <title>AD Tycoon</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Google Search Console verification -->
+  <meta name="google-site-verification" content="Dlz22YBcINeekz1mdX_NlcuNp6Rk-wHUn-PGoYJndC8" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <style>
@@ -224,11 +229,21 @@
       font-size: 0.95rem;
       cursor: pointer;
       white-space: nowrap;
+      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.12s ease;
     }
 
     .upgrade-btn:disabled {
       opacity: 0.5;
       cursor: default;
+      box-shadow: none;
+      transform: none;
+    }
+
+    /* hover animation for all Buy buttons */
+    .upgrade-btn:hover:not(:disabled) {
+      background: #ffffff;
+      box-shadow: 0 3px 0 #9ca3af;
+      transform: translateY(-2px);
     }
 
     /* flying +1 numbers */
